--- a/src/js/views/register.html
+++ b/src/js/views/register.html
@@ -10,6 +10,9 @@
     <input class="form-control" type="email" name="email" ng-model="register.user.email" placeholder="Email">
   </div>
   <div class="form-group">
+    <input class="form-control" type="number" name="age" ng-model="register.user.age" placeholder="Age">
+  </div>
+  <div class="form-group">
     <input class="form-control" type="password" name="password" ng-model="register.user.password" placeholder="Password">
   </div>
   <div class="form-group">
