--- a/src/js/views/events/show.html
+++ b/src/js/views/events/show.html
@@ -4,3 +4,4 @@
 <br>
 <button class="btn btn-primary" ui-sref="eventsEdit({ id: events.event._id })">Edit</button>
 <button class="btn btn-warning" ng-click="events.delete()">Delete</button>
+<button class="btn btn-warning" ng-click="events.interest(events.event)">I'm Interested</button>
