--- a/src/js/views/events/index.html
+++ b/src/js/views/events/index.html
@@ -2,4 +2,6 @@
 <div class="container" ng-repeat ="event in events.events">
     <a ui-sref="eventsShow({ id: event._id})"><h3>{{ event.event_name }}</h3></a>
     <img ng-src="{{ event.event_img }}" alt="{{ event.event_name }}" />
+
+    <button class="btn btn-default" ng-click="eventsCreate()">New Event</button>
 </div>
