--- a/src/js/views/events/index.html
+++ b/src/js/views/events/index.html
@@ -1,5 +1,26 @@
 <h1>Events List</h1>
-<div class="container" ng-repeat ="event in events.events">
+<!-- <div class="container" ng-repeat ="event in events.events">
     <a ui-sref="eventsShow({ id: event._id})"><h3>{{ event.event_name }}</h3></a>
     <img ng-src="{{ event.event_img }}" alt="{{ event.event_name }}" />
+</div> -->
+<!-- <div class="container">
+  <ul class="list-inline">
+    <li class="eventItem" ng-repeat ="event in events.events">
+      <a ui-sref="eventsShow({ id: event._id})"><h3>{{ event.event_name }}</h3></a>
+      <img ng-src="{{ event.event_img }}" alt="{{ event.event_name }}" />
+    </li>
+  </ul>
+
+</div> -->
+<div ng-controller="CarouselDemoCtrl">
+  <div class="container">
+    <div uib-carousel active="active" interval="myInterval" no-wrap="noWrapSlides">
+      <div uib-slide ng-repeat="event in events.events">
+        <div class="carousel-caption">
+          <a ui-sref="eventsShow({ id: event._id})"><h3>{{ event.event_name }}</h3></a>
+        </div>
+        <img ng-src="{{ event.event_img }}" />
+      </div>
+    </div>
+  </div>
 </div>
