added eventsCreate button

--- a/src/js/views/events/index.html
+++ b/src/js/views/events/index.html
@@ -1,4 +1,5 @@
 <h1>Events List</h1>
+<button class="btn btn-default" ng-click="eventsCreate()"></button>
 <!-- <div class="container" ng-repeat ="event in events.events">
 <a ui-sref="eventsShow({ id: event._id})"><h3>{{ event.event_name }}</h3></a>
 <img ng-src="{{ event.event_img }}" alt="{{ event.event_name }}" />
