--- a/src/js/views/events/create.html
+++ b/src/js/views/events/create.html
@@ -1,1 +1,16 @@
 <h1>New Event</h1>
+<form ng-submit="eventsCreate.create()">
+<div class="form-group">
+<label for="name">Name</label>
+<input type="text" class="form-control" id="name" name="name" ng-model="eventsCreate.event.name">
+</div>
+<div class="form-group">
+<label for="address">Address</label>
+<input type="text" class="form-control" id="address" name="address" ng-model="eventsCreate.event.address">
+</div>
+<div class="form-group">
+<label for="description">description</label>
+<input type="text" class="form-control" id="description" name="description" ng-model="eventsCreate.event.description">
+</div>
+<input type="submit" class="btn btn-default btn-block" value="Add">
+</form>
