--- a/src/js/views/events/show.html
+++ b/src/js/views/events/show.html
@@ -1,6 +1,5 @@
-<h2>{{ events.event.name }}</h2>
-<img ng-src="{{ events.event.img }}" alt="{{ events.event.name }}">
-<a ui-sref="usersShow({id : events.event.host._id})"><h3>{{events.event.host.firstName}} {{events.event.host.lastName}}</h3></a>
+<h2>{{ eventsShow.event.name }}</h2>
+
 <button class="btn btn-primary" ui-sref="eventsEdit({ id: eventsShow.event._id })">Edit</button>
 <button class="btn btn-warning" ng-click="eventsShow.delete(eventsShow.events)">Delete</button>
 <button class="btn btn-warning" ng-click="events.interest(events.event)">I'm Interested</button>
