request function added

--- a/src/js/views/events/show.html
+++ b/src/js/views/events/show.html
@@ -2,4 +2,4 @@
 
 <button class="btn btn-primary" ui-sref="eventsEdit({ id: eventsShow.event._id })">Edit</button>
 <button class="btn btn-warning" ng-click="eventsShow.delete(eventsShow.events)">Delete</button>
-<button class="btn btn-warning" ng-click="eventsShow.request()">I'm Interested</button>
+<button class="btn btn-warning" ng-click="eventsShow.request(eventsShow.event)">I'm Interested</button>
