--- a/src/js/views/events/show.html
+++ b/src/js/views/events/show.html
@@ -1,5 +1,5 @@
 <h2>{{ eventsShow.event.name }}</h2>
 
 <button class="btn btn-primary" ui-sref="eventsEdit({ id: eventsShow.event._id })">Edit</button>
-<button class="btn btn-warning" ng-click="eventsShow.delete(eventsShow.events)">Delete</button>
-<button class="btn btn-warning" ng-click="events.interest(events.event)">I'm Interested</button>
+<button class="btn btn-warning" ng-click="eventsShow.delete(eventsShow.event)">Delete</button>
+<button class="btn btn-warning" ng-click="events.interest(eventsShow.event)">I'm Interested</button>
