--- a/src/scss/_misc.scss
+++ b/src/scss/_misc.scss
@@ -41,3 +41,9 @@ img {
   width: 150px;
   object-fit: contain;
 }
+.navBrand{
+  height: 30px;
+  width: 150px;
+  position: relative;
+  top: -10px;
+}
