user profile display fixed

--- a/src/js/views/users/edit.html
+++ b/src/js/views/users/edit.html
@@ -7,7 +7,7 @@
     <label for="firstName">Fist Name</label>
     <input type="text" class="form-control" id="firstName" name="firstName" ng-model="usersEdit.user.firstName">
 
-    <label for="firstName">Last Name</label>
+    <label for="lastName">Last Name</label>
     <input type="text" class="form-control" id="lastName" name="lastName" ng-model="usersEdit.user.lastName">
 
     <label for="firstName">Date of Birth</label>
