--- a/src/js/views/users/show.html
+++ b/src/js/views/users/show.html
@@ -1,8 +1,8 @@
 <div ng-if="usersShow.user.email">
-<h1>{{usersShow.user.first_name}} {{usersShow.user.last_name}}</h1>
+<h1>{{usersShow.user.firstName}} {{usersShow.user.lastName}}</h1>
 
 <img src="{{usersShow.user.profile_picture}}" alt="Profile Picture">
-<p>location &bull; {{usersShow.user.DoB}}</p>
+<p>location &bull; {{usersShow.user.dob}}</p>
 
 <h4>Bio</h4>
 <p>{{usersShow.user.bio}}</p>
