--- a/src/js/views/events/show.html
+++ b/src/js/views/events/show.html
@@ -1,5 +1,51 @@
-<h2>{{ eventsShow.event.name }}</h2>
+<!-- {{ eventsShow.event }} PLEASE LEAVE THIS FOR NOW-->
 
+<div class="eventCard">
+
+
+<div class="eventImage">
+  <img src="{{ eventsShow.event.img }}" alt="{{ event.name }}"/>
+</div>
+
+<div class="eventInfo">
+<h3>{{ eventsShow.event.name }}</h3><p>{{ eventsShow.event.emoji }}</p>
+<img src="{{ usersShow.user.profile_picture }}" alt="Host Profile">
+<p>{{ eventsShow.event.startTime | date }} - {{ eventsShow.event.finishTime | date }}</p>
+
+<p>{{ eventsShow.event.address }}</p>
+<p>{{ eventsShow.event.url }}</p>
+
+
+<p>{{ eventsShow.event.description }}</p>
+<p>{{ eventsShow.event.cost }}</p>
+
+
+</div>
+
+
+</div>
 <button class="btn btn-primary" ui-sref="eventsEdit({ id: eventsShow.event._id })">Edit</button>
 <button class="btn btn-warning" ng-click="eventsShow.delete(eventsShow.events)">Delete</button>
 <button class="btn btn-warning" ng-click="events.interest(events.event)">I'm Interested</button>
+
+<!-- function createFirstEvent(done){
+  User.findOne({
+    email: 'thom@yorke.com'
+  }).then(user => {
+    const today = new Date();
+    const event = new Event({
+      address: '2, Oliver’s Yard, 55 City Rd, London EC1Y 1HQ',
+      lat: '51.523928',
+      lng: '-0.086171',
+      name: 'Coffee with Thom',
+      description: 'Enjoy this place I\'ve never been to',
+      cost: '£100',
+      url: 'http://lantanacafe.co.uk/',
+      img: 'http://combiboilersleeds.com/images/coffee/coffee-2.jpg',
+      emoji: '☕',
+      host: user._id,
+      startTime: today.setDate(today.getDate() + 10),
+      finishTime: today.setDate(today.getDate() + 11)
+    });
+    return event.save();
+  }) -->
