angular events show page links to host profile

--- a/src/js/views/events/show.html
+++ b/src/js/views/events/show.html
@@ -9,7 +9,7 @@
 
 <div class="eventInfo">
 <h3>{{ eventsShow.event.name }}</h3><p>{{ eventsShow.event.emoji }}</p>
-<img src="{{ usersShow.user.profile_picture }}" alt="Host Profile">
+<a ui-sref="usersShow({ id: main.user._id })"><img src="{{ usersShow.user.profile_picture }}" alt="Host Profile"></a>
 <p>{{ eventsShow.event.startTime | date }} - {{ eventsShow.event.finishTime | date }}</p>
 
 <p>{{ eventsShow.event.address }}</p>
@@ -27,3 +27,4 @@
 <button class="btn btn-primary" ui-sref="eventsEdit({ id: eventsShow.event._id })">Edit</button>
 <button class="btn btn-warning" ng-click="eventsShow.delete(eventsShow.events)">Delete</button>
 <button class="btn btn-warning" ng-click="events.interest(events.event)">I'm Interested</button>
+e
