--- a/src/js/views/events/show.html
+++ b/src/js/views/events/show.html
@@ -9,11 +9,11 @@
 
 <div class="eventInfo">
 <h3>{{ eventsShow.event.name }}</h3><p>{{ eventsShow.event.emoji }}</p>
-<img src="{{ usersShow.user.profile_picture }}" alt="Host Profile">
+<a ui-sref="usersShow({ id: main.user._id })"><img src="{{ usersShow.user.profile_picture }}" alt="Host Profile"></a>
 <p>{{ eventsShow.event.startTime | date }} - {{ eventsShow.event.finishTime | date }}</p>
 
 <p>{{ eventsShow.event.address }}</p>
-<p>{{ eventsShow.event.url }}</p>
+<p><a ng-href="{{ eventsShow.event.url }}">{{ eventsShow.event.url }}</a></p>
 
 
 <p>{{ eventsShow.event.description }}</p>
@@ -27,3 +27,4 @@
 <button class="btn btn-primary" ui-sref="eventsEdit({ id: eventsShow.event._id })">Edit</button>
 <button class="btn btn-warning" ng-click="eventsShow.delete(eventsShow.events)">Delete</button>
 <button class="btn btn-warning" ng-click="events.interest(events.event)">I'm Interested</button>
+e
