events edit form added

--- a/src/js/views/events/edit.html
+++ b/src/js/views/events/edit.html
@@ -4,6 +4,40 @@
     <label for="name">Name</label>
     <input type="text" class="form-control" id="name" ng-model="eventsEdit.event.name">
   </div>
+  <div class="form-group">
+    <label for="eventImage">Image</label>
+    <input type="eventImage" class="form-control" id="eventImage" ng-model="eventsEdit.event.img">
+  </div>
+  <div class="form-group">
+    <label for="eventEmoji">Emoji</label>
+    <input type="eventEmoji" class="form-control" id="eventEmoji" ng-model="eventsEdit.event.emoji">
+  </div>
+  <div class="form-group">
+    <label for="startTime">Start Time</label>
+    <input type="startTime" class="form-control" id="startTime" ng-model="eventsEdit.event.startTime">
+  </div>
+  <div class="form-group">
+    <label for="finishTime">Finish Time</label>
+    <input type="finishTime" class="form-control" id="finishTime" ng-model="eventsEdit.event.finishTime">
+  </div>
+  <div class="form-group">
+    <label for="address">Address</label>
+    <input type="address" class="form-control" id="address" ng-model="eventsEdit.event.address">
+  </div>
+  <div class="form-group">
+    <label for="eventUrl">Event Url</label>
+    <input type="eventUrl" class="form-control" id="eventUrl" ng-model="eventsEdit.event.url">
+  </div>
+  <div class="form-group">
+    <label for="description">Event Description</label>
+    <input type="description" class="form-control" id="description" ng-model="eventsEdit.event.description">
+  </div>
+  <div class="form-group">
+    <label for="cost">Event Description</label>
+    <input type="cost" class="form-control" id="cost" ng-model="eventsEdit.event.cost">
+  </div>
+
+
 
   <input type="submit" class="btn btn-primary" value="Update">
 </form>
