--- a/src/js/views/events/show.html
+++ b/src/js/views/events/show.html
@@ -34,3 +34,6 @@
 <button class="btn btn-warning" ng-click="eventsShow.delete(eventsShow.events)">Delete</button>
 <button class="btn btn-warning" ng-click="eventsShow.interested(eventsShow.event)">I'm Interested</button>
 <button class="btn btn-warning" ng-click="eventsShow.notInterested(eventsShow.event)">I'm Not Interested</button>
+<ul>
+  <li ng-repeat="request in eventsShow.requests">{{ request.text }}</li>
+</ul>
