--- a/src/js/views/register.html
+++ b/src/js/views/register.html
@@ -1,10 +1,10 @@
 <h1>Register</h1>
 <form ng-submit="register.register()">
   <div class="form-group">
-    <input class="form-control" type="text" name="first_name" ng-model="register.user.first_name" placeholder="First name">
+    <input class="form-control" type="text" name="first_name" ng-model="register.user.firstName" placeholder="First name">
   </div>
   <div class="form-group">
-    <input class="form-control" type="text" name="last_name" ng-model="register.user.last_name" placeholder="Last name">
+    <input class="form-control" type="text" name="last_name" ng-model="register.user.lastName" placeholder="Last name">
   </div>
   <div class="form-group">
     <input class="form-control" type="email" name="email" ng-model="register.user.email" placeholder="Email">
