interested in events showing on profile

--- a/src/js/views/users/show.html
+++ b/src/js/views/users/show.html
@@ -19,9 +19,7 @@
 
 <h2>Interested in Events</h2>
 <ul>
-<li ng-repeat="interestedIn in usersShow.user.interestedIn">
-
-</li>
+<li ng-repeat="interestedIn in usersShow.user.interestedIn">{{interestedIn.name}}</li>
 </ul>
 
 <h2>Not Interested in Events</h2>
