changed profilePicture formatting

--- a/src/js/views/users/show.html
+++ b/src/js/views/users/show.html
@@ -1,7 +1,7 @@
 <div ng-if="usersShow.user.email">
 <h1>{{usersShow.user.firstName}} {{usersShow.user.lastName}}</h1>
 
-<img src="{{usersShow.user.profile_picture}}" alt="Profile Picture">
+<img src="{{usersShow.user.profilePicture}}" alt="Profile Picture">
 <p>location &bull; {{usersShow.user.dob}}</p>
 
 <h4>Bio</h4>
