--- a/src/js/views/events/show.html
+++ b/src/js/views/events/show.html
@@ -1,36 +1,20 @@
 <!-- {{ eventsShow.event }} PLEASE LEAVE THIS FOR NOW-->
 
 <div class="eventCard">
-
-
 <div class="eventImage">
   <img src="{{ eventsShow.event.img }}" alt="{{ event.name }}"/>
 </div>
-
 <div class="eventInfo">
-<h3>{{ eventsShow.event.name }}</h3><p>{{ eventsShow.event.emoji }}</p>
-<a ui-sref="usersShow({ id: main.user._id })"><img src="{{ usersShow.user.profile_picture }}" alt="Host Profile"></a>
-
-
+<h3>{{ eventsShow.event.name }}</h3>
+<h3>{{ eventsShow.event.host.firstName }} {{ eventsShow.event.host.lastName }}</h3>
+<p>{{ eventsShow.event.emoji }}</p>
+<a ui-sref="usersShow({ id: eventsShow.event.host._id })"><img src="{{ eventsShow.event.host.profilePicture }}" alt="Host Profile"></a>
 <p>{{ eventsShow.event.startTime | date }} - {{ eventsShow.event.finishTime | date }}</p>
-
-<p>{{ eventsShow.event.address }}</p>
 <p><a ng-href="{{ eventsShow.event.url }}">{{ eventsShow.event.url }}</a></p>
-
-<p>{{ eventsShow.event.address }}</p>
-<p>{{ eventsShow.event.url }}</p>
-
-
-
 <p>{{ eventsShow.event.description }}</p>
 <p>{{ eventsShow.event.cost }}</p>
-
-
 </div>
-
-
 </div>
 <button class="btn btn-primary" ui-sref="eventsEdit({ id: eventsShow.event._id })">Edit</button>
 <button class="btn btn-warning" ng-click="eventsShow.delete(eventsShow.events)">Delete</button>
 <button class="btn btn-warning" ng-click="events.interest(events.event)">I'm Interested</button>
-e
