--- a/src/js/views/events/create.html
+++ b/src/js/views/events/create.html
@@ -1,55 +1,52 @@
 <h1>New Event</h1>
 <form ng-submit="eventsCreate.create()">
-<div class="form-group">
-<label for="name">Event name</label>
-<input type="text" class="form-control" id="name" name="name" ng-model="eventsCreate.event.name">
-</div>
-<div class="form-group">
-<label for="address">Address</label>
-<input type="text" class="form-control" id="address" name="address" ng-model="eventsCreate.event.address">
-</div>
-<div class="form-group">
-<label for="event">Event info</label>
-<input type="text" class="form-control" id="event" name="description" ng-model="eventsCreate.event.description">
-</div>
-<div class="form-group">
-<label for="cost">Cost</label>
-<input type="text" class="form-control" id="cost" name="description" ng-model="eventsCreate.event.cost">
-</div>
-<div class="form-group">
-<label for="website">Website</label>
-<input type="text" class="form-control" id="website" name="website" ng-model="eventsCreate.event.url">
-</div>
-<div class="form-group">
-<label for="image">Image</label>
-<input type="text" class="form-control" id="image" name="image" ng-model="eventsCreate.event.img">
-</div>
+  <div class="form-group">
+    <label for="name">Event name</label>
+    <input type="text" class="form-control" id="name" name="name" ng-model="eventsCreate.event.name">
+  </div>
+  <div class="form-group">
+    <label for="address">Address</label>
+    <input type="text" class="form-control" id="address" name="address" ng-model="eventsCreate.event.address">
+  </div>
+  <div class="form-group">
+    <label for="event">Event info</label>
+    <input type="text" class="form-control" id="event" name="description" ng-model="eventsCreate.event.description">
+  </div>
+  <div class="form-group">
+    <label for="cost">Cost</label>
+    <input type="text" class="form-control" id="cost" name="description" ng-model="eventsCreate.event.cost">
+  </div>
+  <div class="form-group">
+    <label for="website">Website</label>
+    <input type="text" class="form-control" id="website" name="website" ng-model="eventsCreate.event.url">
+  </div>
 
-<div class="form-group">
+  <!-- <div class="form-group">
+    <label for="image">Image</label>
+    <input type="text" class="form-control" id="image" name="image" ng-model="eventsCreate.event.img">
+  </div> -->
 
-  <form action="api/events/edit" method="post" enctype="multipart/form-data">
-    <input name="myFile" type="file" class="form-control"/>
-    <input name="width" value="{{ model.widget.width }}" style="display: none"/>
-    <input name="widgetId" value="{{ model.widget._id }}" style="display: none"/>
-    <!-- <input type="submit" class="btn btn-block btn-primary"/>upload image -->
-
-  </form>
-
-
-</div>
+  <div class="form-group" action="../src/images/events" method="post" enctype="multipart/form-data"
+  ng-model="eventsCreate.event.img">
+  <label for="image">Upload Image</label>
+      <input name="myFile" type="file" id="image" class="form-control"/>
+      <input name="width" value="50%" style="display: none"/>
+      <input name="widgetId" value="{{ model.widget._id }}" style="display: none"/>
+      <!-- <input type="submit" class="btn btn-block btn-primary"/>upload image -->
+  </div>
 
 
-<div class="form-group">
-<label for="emoji">Emoji</label>
-<input type="text" class="form-control" id="emoji" name="emoji" ng-model="eventsCreate.event.emoji">
-</div>
-<div class="form-group">
-<label for="startTime">Start time</label>
-<input type="text" class="form-control" id="startTime" name="startTime" ng-model="eventsCreate.event.startTime">
-</div>
-<div class="form-group">
-<label for="description">Finish time</label>
-<input type="text" class="form-control" id="description" name="finishTime" ng-model="eventsCreate.event.finishTime">
-</div>
-<input type="submit" class="btn btn-default btn-block" value="Add">
+  <div class="form-group">
+    <label for="emoji">Emoji</label>
+    <input type="text" class="form-control" id="emoji" name="emoji" ng-model="eventsCreate.event.emoji">
+  </div>
+  <div class="form-group">
+    <label for="startTime">Start time</label>
+    <input type="text" class="form-control" id="startTime" name="startTime" ng-model="eventsCreate.event.startTime">
+  </div>
+  <div class="form-group">
+    <label for="description">Finish time</label>
+    <input type="text" class="form-control" id="description" name="finishTime" ng-model="eventsCreate.event.finishTime">
+  </div>
+  <input type="submit" class="btn btn-default btn-block" value="Add">
 </form>
