--- a/src/js/views/users/show.html
+++ b/src/js/views/users/show.html
@@ -1,37 +1,59 @@
 <div ng-if="usersShow.user.email">
-<h1>{{usersShow.user.firstName}} {{usersShow.user.lastName}}</h1>
+  <h1>{{usersShow.user.firstName}} {{usersShow.user.lastName}}</h1>
 
-<img src="{{usersShow.user.profile_picture}}" alt="Profile Picture">
-<p>location &bull; {{usersShow.user.dob}}</p>
+  <img src="{{usersShow.user.profile_picture}}" alt="Profile Picture">
+  <p>location &bull; {{usersShow.user.dob}}</p>
 
-<h4>Bio</h4>
-<p>{{usersShow.user.bio}}</p>
+  <h4>Bio</h4>
+  <p>{{usersShow.user.bio}}</p>
 
-<h2>Current Events</h2>
+  <h2 class="titles">Current Events</h2>
+  <div class="container">
+    <div class="row">
+      <div class="[ col-xs-12 col-sm-offset-2 col-sm-8 ]">
+        <ul class="event-list">
+          <li ng-repeat="event in usersShow.user.events">
+            <time datetime="2014-07-20">
+							<span class="day">4</span>
+							<span class="month">Jul</span>
+							<span class="year">2017</span>
+							<span class="time">ALL DAY</span>
+						</time>
+						<img class="tile" alt="Independence Day" src="http://www.konadeepsea.com/info/photos/sunset-on-sea_strike.jpg" />
+						<div class="info">
+							<h2 class="title">{{ event.name }}</h2>
+							<p class="desc">{{event.description}}</p>
+              <p class="address">{{event.address}}</p>
+              <p class="interest">Users interested: 10</p>
+						</div>
+						<!-- <div class="social">
+							<ul>
+								<li class="facebook" style="width:33%;"><a href="#facebook"><span class="fa fa-facebook"></span></a></li>
+								<li class="twitter" style="width:34%;"><a href="#twitter"><span class="fa fa-twitter"></span></a></li>
+								<li class="google-plus" style="width:33%;"><a href="#google-plus"><span class="fa fa-google-plus"></span></a></li>
+							</ul>
+						</div> -->
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 
-<ul>
-  <li ng-repeat="events in usersShow.user.events">
-    <img src="{{events.img}}">
-    <a ui-sref="eventsShow({ id: events._id})">{{events.name}}</a>
-    <p>{{events.address}}</p>
-  </li>
-</ul>
+  <h2 class="titles">Interested in Events</h2>
+  <ul>
+    <li ng-repeat="interestedIn in usersShow.user.interestedIn">{{interestedIn.name}}</li>
+  </ul>
 
-<h2>Interested in Events</h2>
-<ul>
-<li ng-repeat="interestedIn in usersShow.user.interestedIn">{{interestedIn.name}}</li>
-</ul>
+  <h2 class="titles">Not Interested in Events</h2>
+  <ul>
+    <li ng-repeat="interestedIn in usersShow.user.notInterestedIn">
 
-<h2>Not Interested in Events</h2>
-<ul>
-<li ng-repeat="interestedIn in usersShow.user.notInterestedIn">
+    </li>
+  </ul>
 
-</li>
-</ul>
+  <button class="btn btn-default" ui-sref="usersEdit({ id: usersShow.user._id })">Edit</button>
 
-<button class="btn btn-default" ui-sref="usersEdit({ id: usersShow.user._id })">Edit</button>
-
-<button class="btn btn-default" ng-click="usersShow.delete(usersShow.user)">Delete</button>
+  <button class="btn btn-default" ng-click="usersShow.delete(usersShow.user)">Delete</button>
 </div>
 
 <ul>
