--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,1 +1,10 @@
+@import "variables";
+
+@import "navbar";
+@import "buttons";
+@import "typography";
+
 @import "misc";
+
+@import "pages/usersShow";
+@import "pages/events";
