--- a/src/js/views/register.html
+++ b/src/js/views/register.html
@@ -15,5 +15,5 @@
   <div class="form-group">
     <input class="form-control" type="password" name="passwordConfirmation" ng-model="register.user.passwordConfirmation" placeholder="Password confirmation">
   </div>
-  <input class="btn btn-primary" type="submit" value="Submit" />
+  <input class="btn btn-primary btn-block" type="submit" value="Submit" />
 </form>
