--- a/src/js/views/users/show.html
+++ b/src/js/views/users/show.html
@@ -40,7 +40,7 @@
     </div>
   </div> -->
 
-  <h2 class="titles">Interested in Events</h2>
+  <!-- <h2 class="titles">Interested in Events</h2>
   <ul>
     <li ng-repeat="interestedIn in usersShow.user.interestedIn">{{interestedIn.name}}</li>
   </ul>
@@ -55,7 +55,7 @@
   <button class="btn btn-default" ui-sref="usersEdit({ id: usersShow.user._id })">Edit</button>
 
   <button class="btn btn-default" ng-click="usersShow.delete(usersShow.user)">Delete</button>
-</div>
+</div> -->
 
 <ul>
   <li ng-repeat="request in usersShow.requests">{{ request.text }}</li>
