--- a/src/scss/_misc.scss
+++ b/src/scss/_misc.scss
@@ -28,6 +28,11 @@
   // height:200px;
   text-align: center;
 }
+.eventImage{
+  width: 150px;
+  height:150px;
+  
+}
 
 .list-inline {
   white-space:nowrap;
