delete button fixed on events

--- a/src/js/views/events/show.html
+++ b/src/js/views/events/show.html
@@ -19,8 +19,8 @@
       </div>
     </div>
 
-    <button ng-if="eventsShow.checkUser(main.user)" class="btn btn-primary" ui-sref="eventsEdit({ id: eventsShow.event._id })">Edit</button>
-    <button class="btn btn-warning" ng-click="eventsShow.delete(eventsShow.events)">Delete</button>
+    <button class="btn btn-primary" ui-sref="eventsEdit({ id: eventsShow.event._id })">Edit</button>
+    <button class="btn btn-warning" ng-click="eventsShow.delete(eventsShow.event)">Delete</button>
     <button class="btn btn-warning" ng-click="eventsShow.interested(eventsShow.event)">I'm Interested</button>
     <button class="btn btn-warning" ng-click="eventsShow.notInterested(eventsShow.event)">I'm Not Interested</button>
     <ul>
