--- a/src/js/views/users/inbox.html
+++ b/src/js/views/users/inbox.html
@@ -1,3 +1,10 @@
 <h1>Inbox</h1>
 
-<h2>{{usersInbox.user.events[0].requests[0]}}</h2>
+
+<ul>
+  <li ng-repeat="user in usersInbox.user">
+    <h4>{{user.sender.firstName}}</h4>
+    <p>{{usersInbox.user[0].sender.email}}</p>
+    <p>{{usersInbox.user[0].text}}</p>
+  </li>
+</ul>
