--- a/src/js/views/users/outbox.html
+++ b/src/js/views/users/outbox.html
@@ -2,9 +2,9 @@
 
 <ul>
   <li ng-repeat="user in usersOutbox.user">
-    <h4>From: Me</h4>
-    <h4>To: {{user.receiver.firstName}}</h4>
-    <p>Email: {{user.receiver.email}}</p>
-    <p>Message: {{user.text}}</p>
+    <h4><b>From:</b> Me</h4>
+    <h4><b>To:</b> {{user.receiver.firstName}}</h4>
+    <p><b>Email:</b> {{user.receiver.email}}</p>
+    <p><b>Message:</b> {{user.text}}</p>
   </li>
 </ul>
