--- a/src/js/views/events/show.html
+++ b/src/js/views/events/show.html
@@ -6,7 +6,7 @@
       </div>
       <div class="eventInfo">
         <h3>{{ eventsShow.event.name }}</h3><p>{{ eventsShow.event.emoji }}</p>
-        <a ui-sref="usersShow({ id: main.user._id })"><img src="{{ usersShow.user.profile_picture }}" alt="Host Profile"></a>
+        <a ui-sref="usersShow({ id: eventsShow.event.host._id })"><img src="{{ usersShow.user.profile_picture }}" alt="Host Profile"></a>
         <p>{{ eventsShow.event.startTime | date }} - {{ eventsShow.event.finishTime | date }}</p>
         <p>{{ eventsShow.event.address }}</p>
         <p>
