--- a/src/js/views/events/show.html
+++ b/src/js/views/events/show.html
@@ -17,10 +17,10 @@
       </div>
     </div>
 
-    <button class="btn btn-primary" ui-sref="eventsEdit({ id: eventsShow.event._id })">Edit</button>
-    <button class="btn btn-warning" ng-click="eventsShow.delete(eventsShow.events)">Delete</button>
-    <button class="btn btn-warning" ng-click="eventsShow.interested(eventsShow.event)">I'm Interested</button>
-    <button class="btn btn-warning" ng-click="eventsShow.notInterested(eventsShow.event)">I'm Not Interested</button>
+    <button ng-if="eventsShow.editToggle" class="btn btn-primary" ui-sref="eventsEdit({ id: eventsShow.event._id })">Edit</button>
+    <button ng-if="eventsShow.deleteToggle" class="btn btn-warning" ng-click="eventsShow.delete(eventsShow.events)">Delete</button>
+    <button ng-if="eventsShow.interestedToggle" class="btn btn-warning" ng-click="eventsShow.interested(eventsShow.event)">I'm Interested</button>
+    <button ng-if="eventsShow.notInterestedToggle" class="btn btn-warning" ng-click="eventsShow.notInterested(eventsShow.event)">I'm Not Interested</button>
     <ul>
       <li ng-repeat="request in eventsShow.requests">{{ request.text }}</li>
     </ul>
