inbox and outbox loading from the same page

--- a/src/js/views/users/inbox.html
+++ b/src/js/views/users/inbox.html
@@ -2,7 +2,7 @@
 
 
 <ul>
-  <li ng-repeat="user in usersInbox.user">
+  <li ng-repeat="user in inbox.user">
     <h4><b>From:</b> {{user.sender.firstName}}</h4>
     <h4><b>To:</b> Me</h4>
     <p><b>Email:</b> {{usersInbox.user[0].sender.email}}</p>
