--- a/src/js/views/users/inbox.html
+++ b/src/js/views/users/inbox.html
@@ -9,8 +9,9 @@
   <li ng-repeat="user in usersInbox.user">
     <h4><b>From:</b> {{user.sender.firstName}}</h4>
     <h4><b>To:</b> Me</h4>
-    <p><b>Email:</b> {{usersInbox.user[0].sender.email}}</p>
-    <p><b>Message:</b> {{usersInbox.user[0].text}}</p>
-    <button class="btn btn-default" ng-click="usersInbox.accept()">Accept</button>
+    <p><b>Email:</b> {{user.sender.email}}</p>
+    <p><b>Message:</b> {{user.text}}</p>
+        <button class="btn btn-default" ng-click="usersInbox.accept(user)">Accept</button>
+
   </li>
 </ul>
