add event fixed

--- a/src/js/views/events/index.html
+++ b/src/js/views/events/index.html
@@ -7,7 +7,7 @@
           <li class="single-event" style="background-image: url('{{ event.img }}');" ui-sref="eventsShow({ id: event._id })">
             <div class="single-event-name">
               <h4>{{ event.name }}</h4>
-              <p>by {{ event.host.email }}</p>
+              <p>by {{ event.host.firstName }}</p>
             </div>
           </li>
         </ul>
