--- a/src/js/views/events/new.html
+++ b/src/js/views/events/new.html
@@ -20,27 +20,27 @@
         </div>
         <div class="form-group">
           <label for="description">Cost</label>
-          <input type="text" class="form-control" id="description" name="description" ng-model="eventsCreate.event.cost">
+          <input type="text" class="form-control" id="cost" name="description" ng-model="eventsCreate.event.cost">
         </div>
         <div class="form-group">
           <label for="description">Website</label>
-          <input type="text" class="form-control" id="description" name="description" ng-model="eventsCreate.event.url">
+          <input type="text" class="form-control" id="url" name="description" ng-model="eventsCreate.event.url">
         </div>
         <div class="form-group">
           <label for="description">Image</label>
-          <input type="text" class="form-control" id="description" name="description" ng-model="eventsCreate.event.img">
+          <input type="text" class="form-control" id="img" name="description" ng-model="eventsCreate.event.img">
         </div>
         <div class="form-group">
           <label for="description">Emoji</label>
-          <input type="text" class="form-control" id="description" name="description" ng-model="eventsCreate.event.emoji">
+          <input type="text" class="form-control" id="emoji" name="description" ng-model="eventsCreate.event.emoji">
         </div>
         <div class="form-group">
           <label for="description">Start time</label>
-          <input type="text" class="form-control" id="description" name="description" ng-model="eventsCreate.event.startTime">
+          <input type="text" class="form-control" id="startTime" name="description" ng-model="eventsCreate.event.startTime">
         </div>
         <div class="form-group">
           <label for="description">Finish time</label>
-          <input type="text" class="form-control" id="description" name="description" ng-model="eventsCreate.event.finishTime">
+          <input type="text" class="form-control" id="finishTime" name="description" ng-model="eventsCreate.event.finishTime">
         </div>
         <input type="submit" class="btn btn-primary btn-block" value="Add">
       </form>
